# labsUni

./: README.md
C++Labs/: CMakeLists.txt  README.md
C++Labs/lab4/: CMakeLists.txt  README.md
C++Labs/lab4/.cache/clangd/index/: Deque.cpp.6FE0563A62A0ECAB.idx  Deque.hpp.4E851FB8D8CC08D6.idx  Deque.tpp.0ECD19AACCE33A9D.idx  Teacher.cpp.B87750DEC2684348.idx  main.cpp.866C6DC3F9518951.idx
C++Labs/lab4/main/: main.cpp
C++Labs/lab4/models/include/: CommissionMember.hpp  Human.hpp  Teacher.hpp  TeacherCommissionMember.hpp
C++Labs/lab4/models/src/: CommissionMember.cpp  Human.cpp  Teacher.cpp  TeacherCommissionMember.cpp
C++Labs/lab5/: README.md
C++Labs/lab5/main/: main.cpp
CLabs/labs1sem/laba3/: 1.c  2.c  3.c
CLabs/labs1sem/laba4/: 1.c  2.c  3.c
CLabs/labs1sem/laba5/: 1.c  2.c  3.c
CLabs/labs1sem/laba6/: 1.c  2.c
CLabs/labs1sem/laba7/: 1.c  2.c  3.c
CLabs/labs1sem/self/: proverka.c
CLabs/labs2Sem/lab1/: func.c  func.h  main.c
CLabs/labs2Sem/lab2/: func.c  func.h  main.c
CLabs/labs2Sem/lab3/: 1task.c  1task.h  main.c  vacancySystem.c  vacancySystem.h  validators.c  validators.h
CLabs/labs2Sem/lab5/: main.c  mergeTask.c  mergeTask.h  myfile.txt  newFile.txt  rpnTask.c  rpnTask.h  stacksImplement.c  stacksImplement.h  sumTask.c  sumTask.h  validators.c  validators.h
CLabs/labs2Sem/lab6/: deque.c  deque.h  dequeCompareTask.c  dequeCompareTask.h  dequeImplementation.c  dequeImplementation.h  main.c  queueImplementation.h  queueImplemetation.c  queueTask.c  queueTask.h  (+2 more)
labs_1_sem/lab4/: CMakeLists.txt
labs_1_sem/lab5/: CMakeLists.txt  README.md
(+54 files in other folders)
